--- a/app/components/Footer.css
+++ b/app/components/Footer.css
@@ -330,7 +330,8 @@
   }
 
   .footer-wave svg {
-    height: 70px;
+    height: 200px;
+    width: 100%;
   }
 
   .footer-form form {
@@ -371,7 +372,8 @@
   }
 
   .footer-wave svg {
-    height: 50px;
+    height: 100px;
+    width: 100%;
   }
 
   .footer-form form {
